# sholat-woe

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/sessions/: 0311af8f-f371-4a22-8347-2bad35fa5c9e.json  5ee129fc-8214-442d-aa31-04eb152a2058.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
scripts/: release.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  prayer.rs  tray.rs
src/lib/: PrayerCard.svelte  Settings.svelte  indonesian-cities.ts  stores.ts
src/routes/: +page.svelte
