[package]
name = "sholat-woe"
version = "1.2.0"
description = "Sholat reminder"
authors = ["Andhika Prakasiwi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "prayer_times_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sholat-woe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.50.0", features = ["time"] }
chrono = "0.4.44"
window-vibrancy = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
